# koco

./: .gitignore  README.md
koco/: CMakeLists.txt  dependencies.rosinstall  package.xml
koco_core_flexbe_states/: CMakeLists.txt  README.md  package.xml  setup.py
koco_core_flexbe_states/src/koco_core_flexbe_states/: check_digital_input.py  compare_kocopose_with_db.py  insert_to_db.py  move_joints_from_db.py  move_sequence_action_state.py  movej_action_state.py  movel_action_state.py  seq_move_joints_from_db.py  seq_movej_action_state.py  seq_movel_action_state.py  service_set_outputs.py  service_trigger_string.py  wait_for_digital_input.py
koco_core_flexbe_states/test/: koco_core_states.test
koco_core_flexbe_states/test/check_digital_input/: check_digital_input_error.yml  check_digital_input_import.yml  check_digital_input_tests.launch
koco_core_flexbe_states/test/compare_kocopose_with_db/: compare_kocopose_with_db_import.yml  compare_kocopose_with_db_tests.launch
koco_core_flexbe_states/test/insert_to_db/: insert_to_db_import.yml  insert_to_db_tests.launch
koco_core_flexbe_states/test/move_joints_from_db/: move_joints_from_db_import.yml  move_joints_from_db_tests.launch
koco_core_flexbe_states/test/move_sequence_action_state/: move_sequence_action_state_import.yml  move_sequence_action_state_tests.launch
koco_core_flexbe_states/test/movej_action_state/: movej_action_state_import.yml  movej_action_state_tests.launch
koco_core_flexbe_states/test/movel_action_state/: movel_action_state_import.yml  movel_action_state_tests.launch
koco_core_flexbe_states/test/seq_move_joints_from_db/: seq_move_joints_from_db_import.yml  seq_move_joints_from_db_tests.launch
koco_core_flexbe_states/test/seq_movej_action_state/: seq_movej_action_state_import.yml  seq_movej_action_state_tests.launch
koco_core_flexbe_states/test/seq_movel_action_state/: seq_movel_action_state_import.yml  seq_movel_action_state_tests.launch
koco_core_flexbe_states/test/service_set_outputs/: service_set_outputs_import.yml  service_set_outputs_tests.launch
koco_core_flexbe_states/test/service_trigger_string/: service_trigger_string_import.yml  service_trigger_string_tests.launch
koco_core_flexbe_states/test/wait_for_digital_input/: wait_for_digital_input_error.yml  wait_for_digital_input_import.yml  wait_for_digital_input_tests.launch
koco_core_flexbe_states/test/wait_for_machine_status/: wait_for_machine_status_import.yml  wait_for_machine_status_tests.launch
koco_nodes/: CMakeLists.txt  package.xml
koco_nodes/config/: counters.yaml
koco_nodes/launch/: counters_monitor_example.launch  database.launch
koco_nodes/nodes/: database_publisher.py
koco_nodes/test/: test_executed_trajectory_watchdog.py  test_executed_trajectory_watchdog.test
koco_services/: CMakeLists.txt  package.xml
koco_services/config/: plan_and_store_default.yaml
koco_services/launch/: plan_and_store.launch
koco_services/nodes/: plan_and_store.py
koco_utils/: CMakeLists.txt  package.xml  setup.py
koco_utils/src/koco_action/: __init__.py  exceptions.py  goal_checks.py  koco_move_actions.py  utils.py
koco_utils/src/koco_conversions/: __init__.py  pose_conversions.py
koco_utils/src/koco_geometry/: averages.py  diffs.py
koco_utils/src/koco_proxies/: proxies.py
koco_utils/src/koco_toolbox/: ros_path.py
koco_utils/test/: dummy_action_servers.py  geometry_averages.test  import.test  import_tests.py  test_actions.test  test_geometry_averages.py  test_goal_proximity.test  test_goal_proximity_checks.py  test_koco_message_store_proxy.py  test_move_actions.py  test_ros_path_resolver.py  test_ros_path_resolver.test
koco_utils/test/data/: exiting_node.py  koco_roslaunch_test_launch.launch  launch_with_exiting_node.launch
