<?xml version="1.0"?>
<package format="2">
  <name>koco_nodes</name>
  <version>1.1.0</version>
  <description>The koco_nodes package.</description>

  <author email="timotej.gaspar@airnamics.com">Timotej Gaspar</author>
  <author email="filip.grcar@airnamics.com">Filip Grcar</author>
  <maintainer email="filip.grcar@airnamics.com">Filip Grcar</maintainer>
  <maintainer email="timotej.gaspar@airnamics.com">Timotej Gaspar</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>flexbe_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>koco_msgs</exec_depend>
  <exec_depend>mongodb_store</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>rostopic</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>

  <test_depend>roslint</test_depend>

</package>
